--- a/Assignment02.html
+++ b/Assignment02.html
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" href="assignment02.css">
+</head>
+
 <header>
   <h1>Assignment 02</h1>
   <p>by Imagona Codalittle</p>
@@ -14,15 +18,14 @@
 <hr id="parta" />
 <br />
 <h2>Part A</h2>
-<p>Create CSS and apply it to HTML.</p>
+<p >Create CSS and apply it to HTML.</p>
 <ul>
   <li>element, class and id selectors</li>
   <li>inline, internal and external CSS</li>
 </ul>
 <hr />
-<p>
-  Hello, world
-</p>
+<p style = "color:red"> Hello, world </p>
+    
 <p class="classy">Classy 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
 <p class="classy">Classy 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
 <p class="classy">Classy 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
@@ -68,6 +71,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Creative-Tail-Animal-fish.svg/128px-Creative-Tail-Animal-fish.svg.png" alt="fish icon" />
 <div id="positionMe">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Creative-Tail-Animal-bird.svg/128px-Creative-Tail-Animal-bird.svg.png" alt="bird icon" /></p>
+  
   <p class="notused">Positioning/combinator section. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
   <p class="notused">Positioning/combinator section. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
   <p class="notused">Positioning/combinator section. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
@@ -85,7 +89,7 @@
 </ul>
 <hr />
   <p>Table 1. How to turn $48,000 into $1,000,000.</p>
-  <table border="1" width="100%">
+  <table border="1" width="100%"class="stripey" class= rightey >
 <thead>
   <tr>
     <th>Initial</th>
@@ -95,7 +99,7 @@
     <th>Savings</th>
   </tr>
 </thead>
-<tbody>
+<tbody class = mousey>
   <tr>
     <td>100</td>
     <td>100</td>
@@ -133,10 +137,10 @@
 	<legend>Survey Respondent</legend>
 	<label for="fname">First Name</label>
   <br /> 
-  <input name="fname" type="text" placeholder="Chris" /> 
+  <input name="fname" type="text" placeholder="Chris" class="pinkey" /> 
   <br /> 
   <label for="lname">Last Name</label>   <br /> 
-	<input name="lname" type="text" placeholder="Jones" /> 
+	<input name="lname" type="text" placeholder="Jones" class="pinkey" /> 
   <br /> <br /> 
     <label for="member">Membership Status</label> 
     <br />
