--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<html>
+<!DOCTYPE html>
+
+<html lang = "en">
+<head> 
+  <title> Generic Webpage </title> 
+  
+</head>
+  
 <body>
-Webpage of Andrew Brandt
+  Webpage of Andrew Brandt
 
 </body>
+
 </html>
