--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 
 <html lang = "en">
 <head> 
-  <title> Generic Webpage </title> 
-  
+  <title> Andrew's Index! </title>
 </head>
-  
 <body>
-  Webpage of Andrew Brandt
-
-</body>
-
-</html>
+  <h1>Andrew Brandt's Student Home Page</h1>
+  <a href="#">GitHub Pages</a> | 
+  <a href="#">mDrive</a> | 
+  <a href="#">CSIS server</a> 
+ <br />
+<br />
+  <h2>Assignments</h2>
+  <a href="#">Assignment 01</a><br />
+  <a href="#">Assignment 02</a><br />
+  <a href="#">Assignment 03</a><br />
+  <a href="#">Assignment 04</a><br />
+  <a href="#">Assignment 05</a><br />
+  <a href="#">Assignment 06</a><br />
+  <a href="#">Assignment 07</a><br />
+</body
