--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,12 +3,23 @@
 <html lang = "en">
 <head> 
   <title> Generic Webpage </title> 
-  
 </head>
   
 <body>
-  Webpage of Andrew Brandt
-
+<h1>Andrew Brandt's Student Home Page</h1>
+<a href="#">GitHub Pages</a> | 
+<a href="#">mDrive</a> | 
+<a href="#">CSIS server</a> 
+<br />
+<br />
+<h2>Assignments</h2>
+<a href="Assignment_1.html">Assignment 01</a><br />
+<a href="#">Assignment 02</a><br />
+<a href="#">Assignment 03</a><br />
+<a href="#">Assignment 04</a><br />
+<a href="#">Assignment 05</a><br />
+<a href="#">Assignment 06</a><br />
+<a href="#">Assignment 07</a><br />
 </body>
 
 </html>
