--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <br />
 <br />
   <h2>Assignments</h2>
-  <a href="#">Assignment 01</a><br />
+  <a href="Assignment_1.html">Assignment 01</a><br />
   <a href="#">Assignment 02</a><br />
   <a href="#">Assignment 03</a><br />
   <a href="#">Assignment 04</a><br />
