--- a/HTML/Assignment_1.html
+++ b/HTML/Assignment_1.html
@@ -1,1 +1,30 @@
-Assignment_1
+<!doctype html>
+<html lang="en">
+<head>
+<title>Assignment One!</title>
+</head>
+<body>
+<h1>Assignment One! </h1>
+<p>Hello, world</p>
+<code>
+    &lt;!doctype html&gt;
+    <br/>
+    &lt;html lang=&quot;en&quot;&gt;
+    <br/>
+    &lt;head&gt;
+    <br/>
+    &lt;title&gt;Minimial HTML&lt;/title&gt;
+    <br/>
+    &lt;/head&gt;
+    <br/>
+    &lt;body&gt;
+    <br/>
+    &lt;p&gt;Hello, world&lt;/p&gt;
+    <br/>
+    &lt;/body&gt;
+</code>
+    
+</body>
+    
+
+</html>
