--- a/HTML/Assignment_1.html
+++ b/HTML/Assignment_1.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Assignment One! </h1>
+<img src="Images/space%20base.png"/>
 <p>Hello, world</p>
 <code>
     &lt;!doctype html&gt;
