--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@
   <a href="#">Assignment 05</a><br />
   <a href="#">Assignment 06</a><br />
   <a href="#">Assignment 07</a><br />
-</body
+</body>
