Finished the HTML doc

--- a/HTML/Assignment_1.html
+++ b/HTML/Assignment_1.html
@@ -1,31 +1,103 @@
 <!doctype html>
 <html lang="en">
-<head>
-<title>Assignment One!</title>
-</head>
-<body>
-<h1>Assignment One! </h1>
-<img src="Images/space%20base.png"/>
-<p>Hello, world</p>
-<code>
-    &lt;!doctype html&gt;
-    <br/>
-    &lt;html lang=&quot;en&quot;&gt;
-    <br/>
-    &lt;head&gt;
-    <br/>
-    &lt;title&gt;Minimial HTML&lt;/title&gt;
-    <br/>
-    &lt;/head&gt;
-    <br/>
-    &lt;body&gt;
-    <br/>
-    &lt;p&gt;Hello, world&lt;/p&gt;
-    <br/>
-    &lt;/body&gt;
-</code>
-    
-</body>
-    
-
+  <head>
+    <title>Assignment One!
+    </title>
+  </head>
+  <body>
+    <header>
+      <h1>Assignment One! 
+      </h1>
+    </header>
+    <table style="width: 100%;" style="height: 100%" border="2">
+      <tbody>
+        <tr style="height:64px">
+          <td ALIGN=CENTER>
+            <img src="Images/Logo.png" style = "margin-right: auto"/>
+          </td>
+          <td colspan="3">
+            <h1 style="text-align: center">We Live in Strange Times
+            </h1>
+          </td>
+          <td rowspan="4">&nbsp;&nbsp;&nbsp;  
+          </td>
+        </tr>
+        <tr style="height:50px" ALIGN=CENTER VALIGN=TOP>
+          <td Style="width:200px" rowspan = "4"> 
+            <img src="Images/Mohawk%20Spaceguy.png"/>
+            <br/>
+            <img src="https://via.placeholder.com/200" />
+          </td>
+          <td colspan = "2">
+            <h2>This just in: Local Man makes a website!
+            </h2>
+          </td>
+          <td> 
+            <h3>Fun Corner!
+            </h3>
+          </td>
+        </tr>
+        <tr>
+          <td colspan = "2" rowspan="2" VALIGN=TOP>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non p.
+              <br>
+            </p>
+          </td>
+          <td>
+            <p>Fun quiz: What's your favorite podcast?
+            </p>
+            <form>
+              <input type="radio" id="html" name="fav_language" value="HTML">
+              <label for="html">Mission to Zyxx
+              </label>
+              <br>
+              <input type="radio" id="css" name="fav_language" value="CSS">
+              <label for="css">My Brother, My Brother and Me
+              </label>
+              <br>
+              <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+              <label for="javascript">Critical Role
+              </label>
+              <br/>
+              <input type="radio" id="pod1" name="fav_language" value="JavaScript">
+              <label for="javascript">The Magnus Archives
+              </label>
+            </form> 
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h1 style = "font-size:14px">Coding: Try it at home!
+            </h1>
+            <code>
+              &lt;!doctype html&gt;
+              <br/>
+              &lt;html lang=&quot;en&quot;&gt;
+              <br/>
+              &lt;head&gt;
+              <br/>
+              &lt;title&gt;Minimial HTML&lt;/title&gt;
+              <br/>
+              &lt;/head&gt;
+              <br/>
+              &lt;body&gt;
+              <br/>
+              &lt;p&gt;Hello, world&lt;/p&gt;
+              <br/>
+              &lt;/body&gt;
+              <br/>
+              &lt;/html&gt;
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">&nbsp; 
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
+<!-So all of my errors are related to the fact that I did not use CSS to set up the table, or align the images, CSS is not resquired for this project so I did not use it-->
