--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
   <h1>Andrew Brandt's Student Home Page</h1>
-  <a href="#">GitHub Pages</a> | 
-  <a href="#">mDrive</a> | 
-  <a href="#">CSIS server</a> 
+  <a href="https://andrewbrandt044.github.io/">GitHub Pages</a> | 
+  <a href="http://webp.svsu.edu/~anbrandt/">mDrive</a> | 
+  <a href="http://csis.svsu.edu/~anbrandt/">CSIS server</a> 
  <br />
 <br />
   <h2>Assignments</h2>
-  <a href="HTML/Assignment_1.html">Assignment 01</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment_1.html">Assignment 01</a><br />
   <a href="#">Assignment 02</a><br />
   <a href="#">Assignment 03</a><br />
   <a href="#">Assignment 04</a><br />
