--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br />
   <h2>Assignments</h2>
   <a href="https://andrewbrandt044.github.io/HTML/Assignment_1.html">Assignment 01</a><br />
-  <a href="#">Assignment 02</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment_2.html">Assignment 02</a><br />
   <a href="#">Assignment 03</a><br />
   <a href="#">Assignment 04</a><br />
   <a href="#">Assignment 05</a><br />
