--- a/HTML/Assignment_2.html
+++ b/HTML/Assignment_2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="assignment02.css">
+<link rel="stylesheet" href="Assignment02.css">
 </head>
 
 <header>
