--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <br />
 <br />
   <h2>Assignments</h2>
-  <a href="https://andrewbrandt044.github.io/HTML/Assignment_1.html">Assignment 01</a><br />
-  <a href="https://andrewbrandt044.github.io/HTML/Assignment_2.html">Assignment 02</a><br />
-  <a href="#">Assignment 03</a><br />
-  <a href="#">Assignment 04</a><br />
-  <a href="#">Assignment 05</a><br />
-  <a href="#">Assignment 06</a><br />
-  <a href="#">Assignment 07</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment01.html">Assignment 01</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment02.html">Assignment 02</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment03.html">Assignment 03</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment04.html">Assignment 04</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment05.html">Assignment 05</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment06.html">Assignment 06</a><br />
+  <a href="https://andrewbrandt044.github.io/HTML/Assignment07.html">Assignment 07</a><br />
 </body>
