--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 
 <html lang = "en">
 <head> 
+     <link rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title> Andrew's Index! </title>
 </head>
 <body>
+<div class="jumbotron text-center"
   <h1>Andrew Brandt's Student Home Page</h1>
   <a href="https://andrewbrandt044.github.io/">GitHub Pages</a> | 
   <a href="http://webp.svsu.edu/~anbrandt/">mDrive</a> | 
   <a href="http://csis.svsu.edu/~anbrandt/">CSIS server</a> 
+</div>
  <br />
 <br />
+
+ <div class="container">
   <h2>Assignments</h2>
   <a href="https://andrewbrandt044.github.io/HTML/Assignment01.html">Assignment 01</a><br />
   <a href="https://andrewbrandt044.github.io/HTML/Assignment02.html">Assignment 02</a><br />
@@ -19,4 +25,5 @@
   <a href="https://andrewbrandt044.github.io/HTML/Assignment05.html">Assignment 05</a><br />
   <a href="https://andrewbrandt044.github.io/HTML/Assignment06.html">Assignment 06</a><br />
   <a href="https://andrewbrandt044.github.io/HTML/Assignment07.html">Assignment 07</a><br />
+</div>
 </body>
