--- a/HTML/Assignment04.html
+++ b/HTML/Assignment04.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <div class="jumbotron text-center">Assignment Four </div>
+    <div class="jumbotron text-center"><h1>Assignment Four</h1> </div>
     <div class="container">
       <a href="Clubmenow/clubDistanceEntry.html">Link one</a><br/>
       <a href="Clubmenow/clubMenow.html">Link two</a><br/>
